Updated to 26.1, cleaned up code, fixed some things